--- a/weather/app/src/main/res/layout/activity_main.xml
+++ b/weather/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="#20C32E"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/try_again"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_dark"
         android:text="@string/try_again"
+        android:textColor="@android:color/black"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
