--- a/weather/app/src/main/res/values/colors.xml
+++ b/weather/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="darkYellow">#EDB406</color>
+    <color name="red">#FD0056</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#E4E4E4</color>
+    <color name="blue_light">#00BCD4</color>
+    <color name="blue_dark">#011063</color>
 </resources>
