--- a/weather/app/src/main/res/layout/app_finished_graphic.xml
+++ b/weather/app/src/main/res/layout/app_finished_graphic.xml
@@ -60,8 +60,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/recyler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
