--- a/weather/app/src/main/res/layout/main_window.xml
+++ b/weather/app/src/main/res/layout/main_window.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="@+id/horizontal_guideline" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/date_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="@string/current_date"
@@ -49,7 +49,7 @@
         android:textSize="60sp"
         android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
 
     <TextView
         android:id="@+id/percieved"
